--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Manuel</title>
-  <style>
+	<style>
 		body {
 			font-family: Arial, sans-serif;
 			font-size: 16px;
@@ -10,53 +11,53 @@
 			background-color: #f2f2f2;
 		}
 
-	label {
-		display: block;
-		margin-bottom: 10px;
-	}
-	
-	input[type="text"] {
-		padding: 5px;
-		margin-bottom: 10px;
-		border: 1px solid #ccc;
-		border-radius: 4px;
-		font-size: 16px;
-		line-height: 1.5;
-		width: 300px;
-	}
-	
-	button {
-		padding: 5px;
-		background-color: #4CAF50;
-		color: white;
-		border: none;
-		border-radius: 4px;
-		cursor: pointer;
-		font-size: 16px;
-		line-height: 1.5;
-		margin-bottom: 10px;
-    width: 200px;
-    height: 40px;
-	}
-	
-	button:hover {
-		background-color: #3e8e41;
-	}
-	
-	iframe {
-		display: block;
-		margin-bottom: 20px;
-	}
-	
-	button:last-child {
-		margin-right: 10px;
-	}
+		label {
+			display: block;
+			margin-bottom: 10px;
+		}
 
-  h1 {
-    font-size: 15px;
-  }
-</style>
-  
+		input[type="text"] {
+			padding: 5px;
+			margin-bottom: 10px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			font-size: 16px;
+			line-height: 1.5;
+			width: 300px;
+		}
+
+		button {
+			/* padding: 5px; */
+			background-color: #4CAF50;
+			color: white;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			font-size: 16px;
+			line-height: 1.5;
+			margin-bottom: 10px;
+			width: 200px;
+			height: 40px;
+		}
+
+		button:hover {
+			background-color: #3e8e41;
+		}
+
+		iframe {
+			display: block;
+			margin-bottom: 20px;
+		}
+
+		button:last-child {
+			margin-right: 10px;
+		}
+
+		h1 {
+			font-size: 15px;
+		}
+	</style>
+
 	<style>
 		iframe {
 			display: inline-block;
@@ -67,29 +68,39 @@
 		}
 	</style>
 </head>
+
 <body>
 
-  <div id="firstbutton">
-    <div>
-		<label for="code">Entrez le code :</label>
-		<input type="text" id="code" name="code" value="9782017102106">
-		<button onclick="urlachanger()">Changer de livre</button>
+	<div id="firstbutton">
+		<div>
+			<label for="code">Entrez le code :</label>
+			<input type="text" id="code" name="code" value="9782017102106">
+			<button onclick="urlachanger()">Changer de livre</button>
+		</div>
+
+		<div>
+			<label for="nbpage">Entrez la page :</label>
+			<input type="text" id="nbpage" name="nbpage" value="1">
+			<button onclick="changerNBpage()">Changer la page du livre</button>
+		</div>
+
+		<div>
+			<a href="rechercher.html">Cherche ton code ici</a>
+		</div>
 	</div>
 
-  <div>
-		<label for="nbpage">Entrez la page :</label>
-		<input type="text" id="nbpage" name="nbpage" value="1">
-		<button onclick="changerNBpage()">Changer la page du livre</button>
+	<div>
+		<h1>Liens rapides :</h1>
+		<button onclick="changerURL(9782017102106)">
+			<h1>Declic Maths 1re</h1>
+		</button>
+		<button onclick="changerURL(9782017102120)">
+			<h1>Physique Chimie 1re</h1>
+		</button>
+		<button onclick="changerURL(9782017102243)">
+			<h1>Mitreden Allemand 1re</h1>
+		</button>
 	</div>
-  </div>
-
-  <div>
-    <h1>Liens rapides :</h1>
-    <button onclick="changerURL(9782017102106)"><h1>Declic Maths 1re</h1></button>
-    <button onclick="changerURL(9782017102120)"><h1>Physique Chimie 1re</h1></button>    
-    <button onclick="changerURL(9782017102243)"><h1>Mitreden Allemand 1re</h1></button>
-  </div>
-	
 
 	<div>
 		<iframe id="myframe1" src="404.html"></iframe>
@@ -97,8 +108,8 @@
 	</div>
 
 	<div>
-		<button onclick="changerPage(-2)"><< Page précédente</button>
-		<button onclick="changerPage(2)">Page suivante >></button>
+		<button onclick="changerPage(-2)">&#x2190;	 Page précédente</button>
+		<button onclick="changerPage(2)">Page suivante &#x2192;</button>
 	</div>
 
 	<script>
@@ -108,13 +119,13 @@
 		var url2 = iframe2.src;
 		var page1 = 1;
 		var page2 = 2;
-    var nbpage = document.getElementById("nbpage");
+		var nbpage = document.getElementById("nbpage");
 
 
-    function urlachanger() {
+		function urlachanger() {
 			var code = document.getElementById("code").value;
-      changerURL(code)
-    }
+			changerURL(code)
+		}
 		function changerURL(code) {
 			var newUrl1 = "https://exobank.hachette-livre.fr/contents/final/" + code + "-fxl/OEBPS/Page_1.html?interface=postMessage";
 			var newUrl2 = "https://exobank.hachette-livre.fr/contents/final/" + code + "-fxl/OEBPS/Page_2.html?interface=postMessage";
@@ -141,14 +152,15 @@
 			}
 			iframe1.src = url1.replace(/Page_\d+/, "Page_" + page1);
 			iframe2.src = url2.replace(/Page_\d+/, "Page_" + page2);
-      nbpage.value = page1
+			nbpage.value = page1
 		}
 
-    function changerNBpage() {
-      var nbpage = document.getElementById("nbpage").value;
-      nbtochange = nbpage - page1
-      changerPage(nbtochange)
-    }
+		function changerNBpage() {
+			var nbpage = document.getElementById("nbpage").value;
+			nbtochange = nbpage - page1
+			changerPage(nbtochange)
+		}
 	</script>
 </body>
+
 </html>
