--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Manuel</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="img/icone.ico" type="image/x-icon">
 </head>
 
 <body onload="editionchoisie()">
@@ -34,7 +35,7 @@
 			<p id="editionesthcoisieest"></p>
 		</div>
 		<div>
-			<a href="rechercher.html">Cherche ton code ici</a>
+			<a href="html/rechercher.html">Cherche ton code ici</a>
 		</div>
 	</div>
 
@@ -62,13 +63,13 @@
 	</div>
 
 	<div id="iframe">
-		<iframe id="myframe1" src="404.html"></iframe>
-		<iframe id="myframe2" src="404.html"></iframe>
+		<iframe id="myframe1" src="html/404.html"></iframe>
+		<iframe id="myframe2" src="html/404.html"></iframe>
 	</div>
 
 	<div id="img">
-		<img id="myimg1" src="404.html">
-		<img id="myimg2" src="404.html">
+		<img id="myimg1" src="img/404.png">
+		<img id="myimg2" src="img/404.png">
 	</div>
 
 	<div>
