--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 			<h1>Manuel HB test</h1>
 		</button>
 		<button onclick="changerURL('1ere/histoire-premiere', 'belin')">
-			<h1>Histoire belin</h1>
+			<h1>Histoire (belin)</h1>
 		</button>
 
 		<button onclick="changerURL('1ere/geographie-premiere', 'belin')">
-			<h1>Geographie-premiere belin</h1>
+			<h1>Geographie (belin)</h1>
 		</button>
 	</div>
 
