--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p id="editionesthcoisieest"></p>
 		</div>
 		<div>
-			<a href="html/rechercher.html">Cherche ton code ici</a>
+			<a href="rechercher.html">Cherche ton code ici</a>
 		</div>
 	</div>
 
