--- a/rechercher.html
+++ b/rechercher.html
@@ -7,7 +7,7 @@
     <label for="recherche">Recherche :</label>
     <input type="text" id="recherche" onkeyup="chercher()" placeholder="Entrez un nom...">
     <br>
-    <a href="../index.html">Retourne sur la page principale</a>
+    <a href="index.html">Retourne sur la page principale</a>
     <div id="resultats"></div>
     <p id="valeur"></p>
 
