--- a/html/404.html
+++ b/html/404.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rien</title>
 </head>
-<body>
+<body style="color:black ;;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;background-color: white;">
   Choisir un manuel à afficher
 </body>
 </html>
