--- a/rechercher.html
+++ b/rechercher.html
@@ -46,7 +46,7 @@
       // Affichage des résultats sur la page HTML
       function afficherResultats(resultat) {
         const table = document.createElement('table');
-        table.innerHTML = '<tr><th>Edition</th><th>Code manuel</th><th>Nom du manuel</th><th>Nombre de pages</th><th>Code manuel prof</th></tr>';
+        table.innerHTML = '<tr><th>Edition</th><th>Code manuel</th><th>Nom du manuel</th><th>Nombre de pages</th><th></th></tr>';
         for (let i = 0; i < resultat.length; i++) {
           const ligne = document.createElement('tr');
           for (let j = 4; j < 9; j++) {
