--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -36,6 +36,7 @@
 				<option value="hatier">Hatier</option>
 				<option value="belin">Belin</option>
 				<option value="LLS">LLS</option>
+sesamth
 			</select>
 			<p id="editionesthcoisieest"></p>
 		</div>
