--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ sesamth
 				iframe2.src = newUrl2;
 			}
 			else if (editionchoisie == 'belin') {
-				var newUrl1 = "Belin/" + code + "/page1.jpg";
-				var newUrl2 = "Belin/" + code + "/page2.jpg";
+				var newUrl1 = "https://nohamr.github.io/Manuelcontent/Belin/" + code + "/page1.jpg";
+				var newUrl2 = "https://nohamr.github.io/Manuelcontent/Belin/" + code + "/page2.jpg";
 				img1.src = newUrl1;
 				img2.src = newUrl2;
 			}
