--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
 			</select>
 		</div>
 		<div>
-			<a href="rechercher.html">Cherche ton code ici</a>
+			<a href="rechercher2.html">Cherche ton code ici</a>
 		</div>
 	</div>
 
