--- a/index2.html
+++ b/index2.html
@@ -41,10 +41,10 @@
 				<option value="hachette">Hachette</option>
 				<option value="didier">Didier</option>
 				<option value="hatier">Hatier</option>
-				<option value="belin">Belin</option>
+				<option value="belin" selected>Belin</option>
 				<option value="LLS">LeLivreScolaire</option>
 				<option value="sesa">Sesamath</option>
-				<option value="magnard" selected>Magnard</option>
+				<option value="magnard">Magnard</option>
 				<option value="delagrave">Delagrave</option>
 
 			</select>
@@ -161,6 +161,8 @@
 				slider.style.display = '';
 				divimg.style.display = 'none';
 				divserver.style.display = 'none';
+				document.documentElement.style.setProperty('--iframe-width', '560px');
+				document.documentElement.style.setProperty('--iframe-height', '800px');
 
 			}
 			else if ((editionchoisie == 'didier') || (editionchoisie == 'hatier')) {
@@ -170,6 +172,8 @@
 				slider.style.display = '';
 				divimg.style.display = 'none';
 				divserver.style.display = 'none';
+				document.documentElement.style.setProperty('--iframe-width', '1426px');
+				document.documentElement.style.setProperty('--iframe-height', '2048px');
 			}
 			else if (editionchoisie == 'belin') {
 				console.log("Belin");
@@ -202,6 +206,8 @@
 				slider.style.display = '';
 				divimg.style.display = 'none';
 				divserver.style.display = '';
+				document.documentElement.style.setProperty('--iframe-width', '1540px');
+				document.documentElement.style.setProperty('--iframe-height', '2050px');
 			}
 			else if (editionchoisie == 'delagrave') {
 				console.log("magnard");
@@ -316,8 +322,8 @@
 				nbpage.value = page1;
 			}
 			// page1.jpg
-			else if ((editionchoisie == 'didier') || (editionchoisie == 'hatier') || (editionchoisie == 'belin')) {
-				// console.log("hatier ou didier");
+			else if ((editionchoisie == 'didier') || (editionchoisie == 'hatier')) {
+				console.log("hatier ou didier ou belin");
 				page1 += delta;
 				page2 += delta;
 				if (page1 < 1) {
@@ -333,6 +339,24 @@
 				iframe1.src = url1.replace(/page\d+/, "page" + page1);
 				iframe2.src = url2.replace(/page\d+/, "page" + page2);
 				nbpage.value = page1;
+			}
+			else if (editionchoisie == 'belin') {
+				console.log("belin");
+				page1 += delta;
+				page2 += delta;
+				if (page1 < 1) {
+					page1 = 1;
+				} else if (page1 > 600) {
+					page1 = 600;
+				}
+				if (page2 < 1) {
+					page2 = 2;
+				} else if (page2 > 600) {
+					page2 = 600;
+				}
+				img1.src = url1.replace(/page\d+/, "page" + page1);
+				img2.src = url2.replace(/page\d+/, "page" + page2);
+				nbpage.value = page1
 			}
 			// print/14.jpg
 			else if (editionchoisie == 'LLS') {
