--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<option value="hachette">Hachette</option>
 				<option value="didier">Didier</option>
 				<option value="hatier">Hatier</option>
-				<option value="belin">Belin</option>
+				<option value="belin" selected>Belin</option>
 				<option value="LLS">LeLivreScolaire</option>
 				<option value="sesa">Sesamath</option>
-				<option value="magnard" selected>Magnard</option>
+				<option value="magnard">Magnard</option>
 				<option value="delagrave">Delagrave</option>
 
 			</select>
@@ -107,7 +107,7 @@
 
 	<div class="slider">
 		<div id="glissière" onclick="taille()" class="col">
-			<input id="slider" type="range" oninput="taille()" min="579" max="1200" class="slider" value="579">
+			<input id="slider" type="range" oninput="taille()" min="30" max="200" class="slider" value="50">
 		</div>
 	</div>
 
@@ -131,7 +131,7 @@
 		<img id="myimg2" src="assets/img/404.png">
 	</div>
 
-	<div>
+	<div id="changepagebutton">
 		<button onclick="pageachanger(-2)">&#x2190; Page précédente</button>
 		<button onclick="pageachanger(2)">Page suivante &#x2192;</button>
 	</div>
@@ -161,6 +161,8 @@
 				slider.style.display = '';
 				divimg.style.display = 'none';
 				divserver.style.display = 'none';
+				document.documentElement.style.setProperty('--iframe-width', '560px');
+				document.documentElement.style.setProperty('--iframe-height', '800px');
 
 			}
 			else if ((editionchoisie == 'didier') || (editionchoisie == 'hatier')) {
@@ -170,12 +172,14 @@
 				slider.style.display = '';
 				divimg.style.display = 'none';
 				divserver.style.display = 'none';
+				document.documentElement.style.setProperty('--iframe-width', '1426px');
+				document.documentElement.style.setProperty('--iframe-height', '2048px');
 			}
 			else if (editionchoisie == 'belin') {
 				console.log("Belin");
-				document.getElementById("editionesthcoisieest").innerHTML = "ca bug encore";
+				document.getElementById("editionesthcoisieest").innerHTML = "";
 				diviframe.style.display = 'none';
-				slider.style.display = 'none';
+				slider.style.display = '';
 				divimg.style.display = '';
 				divserver.style.display = 'none';
 			}
@@ -183,7 +187,7 @@
 				console.log("LLS");
 				document.getElementById("editionesthcoisieest").innerHTML = "";
 				diviframe.style.display = 'none';
-				slider.style.display = 'none';
+				slider.style.display = '';
 				divimg.style.display = '';
 				divserver.style.display = 'none';
 			}
@@ -191,11 +195,21 @@
 				console.log("sesa");
 				document.getElementById("editionesthcoisieest").innerHTML = "";
 				diviframe.style.display = 'none';
-				slider.style.display = 'none';
+				slider.style.display = '';
 				divimg.style.display = '';
 				divserver.style.display = 'none';
 			}
 			else if (editionchoisie == 'magnard') {
+				console.log("magnard");
+				document.getElementById("editionesthcoisieest").innerHTML = "Le serveur n°1 devrait marcher mais au cas où les autres sont dispos.";
+				diviframe.style.display = '';
+				slider.style.display = '';
+				divimg.style.display = 'none';
+				divserver.style.display = '';
+				document.documentElement.style.setProperty('--iframe-width', '1540px');
+				document.documentElement.style.setProperty('--iframe-height', '2050px');
+			}
+			else if (editionchoisie == 'delagrave') {
 				console.log("magnard");
 				document.getElementById("editionesthcoisieest").innerHTML = "Le serveur n°1 devrait marcher mais au cas où les autres sont dispos.";
 				diviframe.style.display = '';
@@ -265,6 +279,13 @@
 				iframe1.src = newUrl1;
 				iframe2.src = newUrl2;
 			}
+			// https://storage.libmanuels.fr/Delagrave/specimen/9782206103983/8/OEBPS/page005.xhtml
+			else if (editionchoisie == 'delagrave') {
+				var newUrl1 = "https://storage.libmanuels.fr/Delagrave/specimen/" + code + '/' + server + "/OEBPS/page002.xhtml?interface=postMessage";
+				var newUrl2 = "https://storage.libmanuels.fr/Delagrave/specimen/" + code + '/' + server + "/OEBPS/page003.xhtml?interface=postMessage";
+				iframe1.src = newUrl1;
+				iframe2.src = newUrl2;
+			}
 			else {
 
 			}
@@ -301,8 +322,8 @@
 				nbpage.value = page1;
 			}
 			// page1.jpg
-			else if ((editionchoisie == 'didier') || (editionchoisie == 'hatier') || (editionchoisie == 'belin')) {
-				// console.log("hatier ou didier");
+			else if ((editionchoisie == 'didier') || (editionchoisie == 'hatier')) {
+				console.log("hatier ou didier ou belin");
 				page1 += delta;
 				page2 += delta;
 				if (page1 < 1) {
@@ -318,6 +339,24 @@
 				iframe1.src = url1.replace(/page\d+/, "page" + page1);
 				iframe2.src = url2.replace(/page\d+/, "page" + page2);
 				nbpage.value = page1;
+			}
+			else if (editionchoisie == 'belin') {
+				console.log("belin");
+				page1 += delta;
+				page2 += delta;
+				if (page1 < 1) {
+					page1 = 1;
+				} else if (page1 > 600) {
+					page1 = 600;
+				}
+				if (page2 < 1) {
+					page2 = 2;
+				} else if (page2 > 600) {
+					page2 = 600;
+				}
+				img1.src = url1.replace(/page\d+/, "page" + page1);
+				img2.src = url2.replace(/page\d+/, "page" + page2);
+				nbpage.value = page1
 			}
 			// print/14.jpg
 			else if (editionchoisie == 'LLS') {
@@ -362,7 +401,7 @@
 				nbpage.value = page1;
 			}
 			// /page003.xhtml?interface=postMessage"
-			else if (editionchoisie == 'magnard') {
+			else if ((editionchoisie == 'magnard') || (editionchoisie == 'delagrave')) {
 				// console.log("magnard");
 				page1 += delta;
 				page2 += delta;
@@ -398,12 +437,7 @@
 	<script>
 		function taille() {
 			var entree = document.getElementById("slider");
-			var myframe1 = document.getElementById("myframe1");
-			var myframe2 = document.getElementById("myframe2");
-			myframe1.style.width = entree.value + "px";
-			myframe1.style.height = entree.value * 1.4 + "px";
-			myframe2.style.width = entree.value + "px";
-			myframe2.style.height = entree.value * 1.4 + "px";
+			document.documentElement.style.setProperty('--scalenb', entree.value/100)
 		}
 	</script>
 
@@ -465,7 +499,6 @@
 		// mode sombre
 		const switchThemeBtn = document.querySelector('.changeTheme')
 		switchThemeBtn.addEventListener('click', () => {
-
 			// mode sombre 
 			if (toggleTheme === 0) {
 				document.documentElement.style.setProperty('--color-scheme', 'dark')
