--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<option value="hachette">Hachette</option>
 				<option value="didier">Didier</option>
 				<option value="hatier">Hatier</option>
-				<option value="belin" selected>Belin</option>
+				<option value="belin">Belin</option>
 				<option value="LLS">LeLivreScolaire</option>
 				<option value="sesa">Sesamath</option>
 				<option value="magnard">Magnard</option>
