--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 
-	<div id="iframe">
+	<div id="iframe" style="max-width: 30vh;">
 		<div id="iframe-1">
 			<div class="iframe-div-1">
 				<iframe id="myframe1"
