hide fast links

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 		<div>
 			<label for="code">Entrez le code :</label>
+			<div>
+				<a href="rechercher.html">Cherche ton code ici</a>
+			</div>
 			<input type="text" id="code" name="code" value="9782017102106">
 			<button onclick="urlachanger()">Changer de livre</button>
 		</div>
@@ -65,12 +68,9 @@
 				<option value="9">9</option>
 			</select>
 		</div>
-		<div>
-			<a href="rechercher.html">Cherche ton code ici</a>
-		</div>
 	</div>
 
-	<div>
+	<!-- <div>
 		<h1>Liens rapides :</h1>
 		<button onclick="changerURL(9782017102106, 'hachette')">
 			<h1>Declic Maths 1re</h1>
@@ -103,7 +103,7 @@
 		<button onclick="changerURL('9782210113183', 'magnard')">
 			<h1>Magnard test</h1>
 		</button>
-	</div>
+	</div> -->
 
 	<div class="slider">
 		<div id="glissière" onclick="taille()" class="col">
