--- a/rechercher.html
+++ b/rechercher.html
@@ -46,10 +46,10 @@
       // Affichage des résultats sur la page HTML
       function afficherResultats(resultat) {
         const table = document.createElement('table');
-        table.innerHTML = '<tr><th>Edition</th><th>Code manuel</th><th>Nom du manuel</th><th>Nombre de pages</th><th></th></tr>';
+        table.innerHTML = '<tr><th>Edition</th><th>Code manuel</th><th>Nom du manuel</th</tr>';
         for (let i = 0; i < resultat.length; i++) {
           const ligne = document.createElement('tr');
-          for (let j = 4; j < 9; j++) {
+          for (let j = 4; j < 7; j++) {
             const cellule = document.createElement('td');
             const texte = document.createTextNode(resultat[i][j]);
             cellule.appendChild(texte);
