--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<option value="sesa">Sesamath</option>
 				<option value="magnard">Magnard</option>
 				<option value="delagrave">Delagrave</option>
-				<option value="nathan">Nathan</option>
+				<option value="nathan">Nathan/Bordas</option>
 
 			</select>
 			<p id="editionesthcoisieest"></p>
@@ -73,11 +73,20 @@
 
 	<div>
 		<h1>Liens rapides :</h1>
+		<button onclick="changerURL(9782091317113, 'nathan')">
+			<h1>Maths Spe</h1>
+		</button>
 		<button onclick="changerURL(9782091317243, 'nathan')">
 			<h1>Maths Ex</h1>
 		</button>
-		<button onclick="changerURL(9782091317113, 'nathan')">
-			<h1>Maths Spe</h1>
+		<button onclick="changerURL(9782047390726, 'nathan')">
+			<h1>PC Spe</h1>
+		</button>
+		<button onclick="changerURL(9782210114012, 'magnard')">
+			<h1>Anglais (magnard)</h1>
+		</button>
+		<button onclick="changerURL(48452499, 'LLS')">
+			<h1>ES (lls)</h1>
 		</button>
 		<!-- <button onclick="changerURL(9782017102120, 'hachette')">
 			<h1></h1>
@@ -585,5 +594,5 @@
 
 		capture();</script> -->
 </body>
-
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "5b5f970a1c2047c887525b306b0211a2"}'></script><!-- End Cloudflare Web Analytics -->
 </html>
